name:		posix-paths
version:        0.1.0.0
license:	BSD3
license-file:	LICENSE
maintainer:	jwlato@gmail.com
bug-reports: http://hackage.haskell.org/trac/ghc/newticket?component=libraries/unix
synopsis:	POSIX filepath/directory functionality
category:       System
description:
	This package gives access to certain POSIX-based Filepath/Directory
  services.  
	.
	The package is not supported under Windows (except under Cygwin).
extra-source-files:
extra-tmp-files:
build-type: Simple
Cabal-Version: >= 1.16

Library
    hs-source-dirs:     src
    default-language:   Haskell2010
    exposed-modules:    System.Posix.FilePath
    build-depends:      base >= 4.2 && < 4.7,
                        bytestring >= 0.9.2.0 && < 0.11,
                        unix
